# voice-recognition

./: .gitignore  README.md  documentation.md  hey_jetson_listener.py  llama_transcript_edge_example.py  llama_transcript_example.py  pipeline_live_test.py  pipeline_test.py  pyproject.toml
deploy/: hey-jetson.service  run_hey_jetson.sh
docs/: DEPLOY_JETSON_ORIN_NANO.md  requirements-jetson38.txt
src/voice_recognition/: __init__.py  cli.py  postprocess.py
src/voice_recognition/audio/: __init__.py  collector.py  config.py  features.py
src/voice_recognition/decoder/: README.md  __init__.py  ctc_prefix_beam_search.py
src/voice_recognition/models/: __init__.py  nemo_model.py
src/voice_recognition/pipeline/: README.md  __init__.py  streaming_loop.py
src/voice_recognition/stabilizer/: README.md  __init__.py  caption_stabilizer.py
src/voice_recognition/wakeword/: __init__.py  hey_jetson.py  tts.py
tests/: __init__.py  test_caption_stabilizer.py  test_ctc_prefix_beam_search.py  test_streaming_loop.py
